Added page Gynecology

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -262,6 +262,24 @@
             "description": "إزالة زوائد بطانة الرحم وعنق الرحم من خلال تقنيات جراحية بالمنظار الرحمي وطرق طفيفة التوغل أخرى."
         }
     },
+    "gynecologyPlanned": {
+        "mainTitle": "طبيب أمراض النساء في إسرائيل يقدم تشخيصًا مهنيًا وعلاجًا واستشارات مع العناية بصحة المرأة",
+        "mainDescription": "موعد مع طبيب أمراض نساء ذي خبرة في إسرائيل: التشخيص والعلاج والوقاية ودعم صحة المرأة. طرق حديثة، الموجات فوق الصوتية، الفحوصات، علاج الالتهابات، الاضطرابات الهرمونية والتخطيط للحمل. نهج فردي، دقة وثقة - ممارسة خاصة للطبيب.",
+        "seoTitle": "الرعاية والجراحة النسائية - عيادة الدكتور سيرج تونيتسكي",
+        "seoDescription": "رعاية نسائية شاملة تشمل الجراحات المخططة، متوسطة الخطورة والطارئة. تشخيص احترافي وعلاج بالطرق الحديثة.",
+        "plannedSurgeries": {
+            "title": "العمليات الجراحية المخططة",
+            "description": "العمليات الجراحية النسائية المخططة هي إجراءات مجدولة بعناية لعلاج الحالات المزمنة التي تؤثر بشكل كبير على جودة الحياة. تشمل هذه الجراحات علاج أورام الرحم الليفية، بطانة الرحم المهاجرة، أمراض المبيض، هبوط أعضاء الحوض وخلل التنسج الشديد لعنق الرحم. كل حالة تتطلب تحضيرًا دقيقًا قبل العملية، بما في ذلك التشخيص الشامل وتقييم الحالة الصحية العامة للمريضة. نهجنا يضمن التوقيت الأمثل للجراحة وأفضل النتائج الممكنة مع أقل وقت للتعافي."
+        },
+        "moderateRiskSurgeries": {
+            "title": "العمليات الجراحية متوسطة الخطورة",
+            "description": "العمليات الجراحية النسائية متوسطة الخطورة تعالج الحالات التي قد تؤثر على الخصوبة وتتطلب خبرة متخصصة. تشمل هذه الإجراءات علاج موه البوق المزمن، مرض الالتصاقات في أعضاء الحوض المسبب للعقم، استئصال الحاجز المهبلي وإزالة الزوائد اللحمية. تتطلب هذه الجراحات تخطيطًا دقيقًا وتنفيذًا محكمًا للحفاظ على الوظيفة الإنجابية مع العلاج الفعال للحالة الأساسية. نستخدم تقنيات التنظير البطني والرحمي المتقدمة لتقليل التدخل الجراحي."
+        },
+        "emergencySurgeries": {
+            "title": "العمليات الجراحية الطارئة",
+            "description": "العمليات الجراحية النسائية الطارئة تُجرى للحالات الحادة التي تتطلب تدخلًا فوريًا للحفاظ على الحياة والصحة. تشمل هذه علاج تمزق أكياس المبيض، ثقب الرحم، قيح البوق، خراج البوق والمبيض والحمل خارج الرحم. الوقت حاسم في هذه الحالات، وفريقنا مجهز لتوفير تشخيص سريع وعلاج جراحي فوري على مدار الساعة طوال أيام الأسبوع. نعطي الأولوية لسلامة المرضى ونستخدم تقنيات طفيفة التوغل كلما أمكن ذلك، حتى في حالات الطوارئ."
+        }
+    },
     "stories": {
         "title": "قصص النجاح",
         "fertility": {
