--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -262,6 +262,24 @@
       "description": "הסרת פוליפים של רירית הרחם וצוואר הרחם באמצעות טכניקות כירורגיות היסטרוסקופיות ופולשניות מינימלית אחרות."
     }
   },
+  "gynecologyPlanned": {
+    "mainTitle": "גינקולוג בישראל מציע אבחון מקצועי, טיפול וייעוץ בדאגה לבריאות האישה",
+    "mainDescription": "פגישה עם גינקולוג מנוסה בישראל: אבחון, טיפול, מניעה ותמיכה בבריאות האישה. שיטות מודרניות, אולטרסאונד, בדיקות, טיפול בדלקות, הפרעות הורמונליות ותכנון הריון. גישה אישית, עדינות ואמון - קליניקה פרטית של הרופא.",
+    "seoTitle": "טיפול וכירורגיה גינקולוגית - מרפאת ד״ר סרגיי טוניצקי",
+    "seoDescription": "טיפול גינקולוגי מקיף הכולל ניתוחים מתוכננים, בסיכון בינוני וחירום. אבחון מקצועי וטיפול בשיטות מודרניות.",
+    "plannedSurgeries": {
+      "title": "ניתוחים מתוכננים",
+      "description": "ניתוחים גינקולוגיים מתוכננים הם הליכים כירורגיים המתוזמנים בקפידה לטיפול במצבים כרוניים המשפיעים משמעותית על איכות החיים. ניתוחים אלה כוללים טיפול בשרירנים של הרחם, אנדומטריוזיס, מחלות שחלות, צניחת איברי האגן ודיספלזיה חמורה של צוואר הרחם. כל מקרה דורש הכנה קפדנית לפני הניתוח, כולל אבחון מקיף והערכת מצב הבריאות הכללי של המטופלת. הגישה שלנו מבטיחה תזמון אופטימלי לניתוח ותוצאות הטובות ביותר עם זמן החלמה מינימלי."
+    },
+    "moderateRiskSurgeries": {
+      "title": "ניתוחים בסיכון בינוני",
+      "description": "ניתוחים גינקולוגיים בסיכון בינוני מטפלים במצבים שעלולים להשפיע על הפוריות ודורשים מומחיות מיוחדת. הליכים אלה כוללים טיפול בהידרוסלפינקס כרוני, מחלת הידבקויות של איברי האגן הגורמת לאי פוריות, כריתת מחיצה נרתיקית והסרת פוליפים. ניתוחים אלה דורשים תכנון קפדני וביצוע מדויק כדי לשמר את התפקוד הרבייתי תוך טיפול יעיל במצב הבסיסי. אנו משתמשים בטכניקות לפרוסקופיות והיסטרוסקופיות מתקדמות כדי למזער את הפולשניות."
+    },
+    "emergencySurgeries": {
+      "title": "ניתוחי חירום",
+      "description": "ניתוחים גינקולוגיים דחופים מבוצעים במצבים חריפים הדורשים התערבות מיידית לשמירה על חיים ובריאות. אלה כוללים טיפול בקרע ציסטות שחלות, ניקוב רחם, פיוסלפינקס, מורסה טובו-אוברית והריון חוץ רחמי. הזמן קריטי במקרים אלה, והצוות שלנו מצויד לספק אבחון מהיר וטיפול כירורגי מיידי 24/7. אנו נותנים עדיפות לבטיחות המטופלות ומשתמשים בטכניקות פולשניות מינימלית במידת האפשר, אפילו במצבי חירום."
+    }
+  },
   "stories": {
     "title": "סיפורי הצלחה",
     "fertility": {
