--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -278,6 +278,24 @@
             "description": "Удаление эндометриальных и цервикальных полипов с помощью гистероскопических и других малоинвазивных хирургических техник."
         }
     },
+    "gynecologyPlanned": {
+        "mainTitle": "Гинеколог в Израиле предлагает профессиональную диагностику, лечение и консультации с заботой о женском здоровье",
+        "mainDescription": "Приём опытного гинеколога в Израиле: диагностика, лечение, профилактика и сопровождение женского здоровья. Современные методы, УЗИ, анализы, лечение воспалений, гормональных нарушений и планирование беременности. Индивидуальный подход, деликатность и доверие — частная практика доктора.",
+        "seoTitle": "Гинекологическое лечение и хирургия - Клиника Доктора Сергея Туницкого",
+        "seoDescription": "Комплексное гинекологическое обслуживание, включая плановые, среднего риска и экстренные операции. Профессиональная диагностика и лечение современными методами.",
+        "plannedSurgeries": {
+            "title": "Плановые операции",
+            "description": "Плановые гинекологические операции — это тщательно спланированные хирургические вмешательства для лечения хронических заболеваний, существенно влияющих на качество жизни. К таким операциям относятся лечение миомы матки, эндометриоза, заболеваний яичников, пролапса тазовых органов и тяжелой дисплазии шейки матки. Каждый случай требует тщательной предоперационной подготовки, включая комплексную диагностику и оценку общего состояния здоровья пациента. Наш подход обеспечивает оптимальное время для операции и лучшие возможные результаты с минимальным периодом восстановления."
+        },
+        "moderateRiskSurgeries": {
+            "title": "Операции среднего риска",
+            "description": "Гинекологические операции среднего риска направлены на лечение состояний, которые могут влиять на фертильность и требуют специализированного опыта. Эти процедуры включают лечение хронического гидросальпинкса, спаечной болезни тазовых органов, вызывающей бесплодие, иссечение влагалищной перегородки и удаление полипов. Эти операции требуют тщательного планирования и точного выполнения для сохранения репродуктивной функции при эффективном лечении основного заболевания. Мы используем передовые лапароскопические и гистероскопические техники для минимизации инвазивности."
+        },
+        "emergencySurgeries": {
+            "title": "Экстренные операции",
+            "description": "Экстренные гинекологические операции выполняются при острых состояниях, требующих немедленного вмешательства для сохранения жизни и здоровья. К ним относятся лечение разрывов кист яичников, перфорации матки, пиосальпинкса, тубоовариального абсцесса и внематочной беременности. Время критично в этих случаях, и наша команда оснащена для обеспечения быстрой диагностики и немедленного хирургического лечения 24/7. Мы приоритезируем безопасность пациентов и используем малоинвазивные методы, когда это возможно, даже в экстренных ситуациях."
+        }
+    },
     "stories": {
         "title": "Успешные истории",
         "fertility": {
